--- a/package.json
+++ b/package.json
@@ -6,20 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "tsx ./scripts/loadDb.ts",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.3"
-  },
+    "@ai-sdk/openai": "^0.0.72",
+    "@datastax/astra-db-ts": "^1.5.0",
+    "@langchain/community": "^0.3.12",
+    "ai": "^3.4.33",
+    "dotenv": "^16.4.5",
+    "langchain": "^0.3.5",
+    "next": "15.1.3",
+    "openai": "^4.71.1",
+    "puppeteer": "^23.7.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
+    },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20.17.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
